--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bunit-dotnetday-switzerland-2022",
-  "version": "0.9.9",
+  "name": "reveal.js",
+  "version": "4.3.1",
   "description": "The HTML Presentation Framework",
-  "homepage": "https://linkdotnet.github.io/bunit-dotnetday-switzerland-2022",
+  "homepage": "https://revealjs.com",
   "subdomain": "revealjs",
   "main": "dist/reveal.js",
   "module": "dist/reveal.esm.js",
@@ -10,12 +10,12 @@
   "scripts": {
     "test": "gulp test",
     "start": "gulp serve",
-    "build": "gulp build",
-    "deploy": "gh-pages -d build"
+    "build": "gulp build"
   },
   "author": {
-    "name": "Steven Giesel",
-    "web": "https://steven-giesel.com"
+    "name": "Hakim El Hattab",
+    "email": "hakim.elhattab@gmail.com",
+    "web": "https://hakim.se"
   },
   "repository": {
     "type": "git",
@@ -42,7 +42,7 @@
     "fitty": "^2.3.0",
     "glob": "^7.1.7",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^5.0.0",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-connect": "^5.7.0",
     "gulp-eslint": "^6.0.0",
@@ -50,7 +50,7 @@
     "gulp-tap": "^2.0.0",
     "gulp-zip": "^4.2.0",
     "highlight.js": "^10.0.3",
-    "marked": "^2.0.3",
+    "marked": "^4.0.12",
     "node-qunit-puppeteer": "^2.1.0",
     "qunit": "^2.17.2",
     "rollup": "^2.48.0",
@@ -96,8 +96,5 @@
       "no-eq-null": 2,
       "no-unused-expressions": 0
     }
-  },
-  "dependencies": {
-    "reveal-code-focus": "^1.1.0"
   }
 }
